# for display continuity sake please use 2 spaces instead of tabs

2014-07-01 mmichaud <m.michael.michaud@orange.fr>
  * Improve copy/paste style behaviour while copying from/to
    ReferencedImageLayer
  * Fix bug #371 on WritablePostgisDataStoreDataSource : null schema

2014-06-14 mmichaud <m.michael.michaud@orange.fr>
  * Fix a bug in PostGISDataStoreDataSource thanks to Francisco avalos
    (tables in non public schema could not be read)

2014-06-08 mmichaud <m.michael.michaud@orange.fr>
  * Add "display vertex" in ColorThemingPanel (vertexStyleEnabled attribute)

2014-05-29 mmichaud <m.michael.michaud@orange.fr>
  * Add lineWidth option to ColorThemingPanel


* release 1.7.1 ***************************************************************

2014-05-18 ede
  * Fix nasty OSX bug preventing users to open files


* release 1.7.0 ***************************************************************

2014-05-08 mmichaud <m.michael.michaud@orange.fr>
  * Improve Buffer plugin according to FR 204
    (separate left/right sigle sided buffer)
  * Improve extract segments plugin. It can now make the most basic
    operation (extract each segment of each feature) and keep attributes.
  * Fix #364 AutoAssignAttribute : make it possible to set a date

2014-05-07 mmichaud <m.michael.michaud@orange.fr>
  * Fix #362 : NPE in ReplaceAttributePlugIn

2014-05-01 mmichaud <m.michael.michaud@orange.fr>
  * Fix #359 : AddDataStore and AddWritableDataStore panel was not working
    with java 8

2014-04-26 mmichaud <m.michael.michaud@orange.fr>
  * Fix #358 : resizing a horizontal / vertival line was not possible

2014-04-20 ede
  * fix "attribute window context menu shows while multi selecting on mac"
    https://sourceforge.net/p/jump-pilot/bugs/338/

2014-04-19 ede
  * CORE contains printing capability to PDF, Printer now (SkyPrinter)

2014-04-06 mmichaud <m.michael.michaud@orange.fr>
  * Fix #356 commit from a WritableDataStoreDataSource layer was not working