@@ -4,6 +4,7 @@
   * Improve copy/paste style behaviour while copying from/to
     ReferencedImageLayer
   * Fix bug #371 on WritablePostgisDataStoreDataSource : null schema
+  * AttributeTable sorting is now Locale sensitive for String attributes
 
 2014-06-14 mmichaud <m.michael.michaud@orange.fr>
   * Fix a bug in PostGISDataStoreDataSource thanks to Francisco avalos
